crates/jekko-tui/tests/snapshots/session_route_snapshots__session_route_empty_no_sidebar_120x30.snap
---
source: crates/jekko-tui/tests/session_route_snapshots.rs
expression: out
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
" > Awaiting Prompt widget (packet H)                                                                                    "
"submit · ctrl+c clear · esc back                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"submit · ctrl+c clear · esc back                                                                                        "
