crates/jekko-tui/tests/snapshots/session_route_snapshots__session_route_empty_sidebar_daemon_offline_120x30.snap
---
source: crates/jekko-tui/tests/session_route_snapshots.rs
expression: out
---
"                                                                              │Offline Session                          "
"                                                                              │sess_offline                             "
"                                                                              │                                         "
"                                                                              │● daemon offline                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"──────────────────────────────────────────────────────────────────────────────│                                         "
" > Awaiting Prompt widget (packet H)                                          │                                         "
"submit · ctrl+c clear · esc back                                              │                                         "
"                                                                              │                                         "
"                                                                              │                                         "
"submit · ctrl+c clear · esc back                                              │                                         "
