crates/jekko-tui/tests/snapshots/session_route_snapshots__session_route_footer_hint_120x30.snap
---
source: crates/jekko-tui/tests/session_route_snapshots.rs
expression: out
---
"> you                                                                                                                   "
"  What is the capital of France?                                                                                        "
"◆ Jekko · mock                                                                                                          "
"  The capital of France is Paris.                                                                                       "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
" > Awaiting Prompt widget (packet H)                                                                                    "
"submit · ctrl+c clear                                                                                                   "
"                                                                                                                        "
"                                                                                                                        "
"submit · ctrl+c clear · esc back                                                                                        "
