crates/jekko-tui/tests/snapshots/session_route_snapshots__session_route_multi_turn_120x40.snap
---
source: crates/jekko-tui/tests/session_route_snapshots.rs
expression: out
---
"> you                                                                                                                   "
"  Hello Jekko.                                                                                                          "
"◆ Jekko                                                                                                                 "
"  Hello! How can I help you today?                                                                                      "
"> you                                                                                                                   "
"  Explain async/await in Rust.                                                                                          "
"◆ Jekko                                                                                                                 "
"  async/await in Rust is built on futures. An async fn returns a Future that you can .await to drive it to completion.  "
"> you                                                                                                                   "
"  Show me a simple example.                                                                                             "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
" > Awaiting Prompt widget (packet H)                                                                                    "
"submit · ctrl+c clear · esc back                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"submit · ctrl+c clear · esc back                                                                                        "
